save function to change themes

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <title>Catalogo de Componentes</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link id="app-theme" rel="stylesheet" type="text/css" href="assets/themes/default.css">
 </head>
 <body>
   <app-root></app-root>
