--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <!-- Sweet Alert 2 -->
-  <link rel="stylesheet" href="sweetalert2.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="sweetalert2.min.css"> -->
 
   <title>Catalogo de Componentes</title>
   <base href="/">
@@ -19,7 +19,7 @@
   <app-root></app-root>
 
   <!-- Sweet Alert 2 -->
-  <script src="sweetalert2.min.js"></script>
+  <!-- <script src="sweetalert2.min.js"></script> -->
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
